--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -36,12 +36,21 @@ jobs:
           cp -R $OPENSSL_SRC/* $GITHUB_WORKSPACE/.deps/openssl/
           echo "OpenSSL copied from $OPENSSL_SRC to $GITHUB_WORKSPACE/.deps/openssl"
 
-      # Run Klocwork scan (kwinject wraps the entire build process)
+      # Create build script that kwinject can wrap
+      - name: Create build script
+        shell: bash
+        run: |
+          cat > $GITHUB_WORKSPACE/build.sh << 'EOF'
+          #!/bin/bash
+          set -e
+          cmake -DCMAKE_USE_OPENSSL=ON -DOPENSSL_ROOT_DIR=$GITHUB_WORKSPACE/.deps/openssl .
+          make -j14
+          EOF
+          chmod +x $GITHUB_WORKSPACE/build.sh
+
+      # Run Klocwork scan (kwinject wraps the build script)
       - name: Klocwork scan
         uses: cloudbees-io-gha/perforce-klocwork-sast-publish@v1
-        env:
-          OPENSSL_ROOT_DIR: ${{ github.workspace }}/.deps/openssl
-          CMAKE_USE_OPENSSL: ON
         with:
           cloudbees-url: ${{ vars.CLOUDBEES_QA_API_URL }}
           url: ${{ vars.KLOCWORK_URL }}
@@ -50,5 +59,5 @@ jobs:
           username: ${{ vars.KLOCWORK_USERNAME }}
           project-name: test-cmake-gha
           build-directory: ctest
-          build-tool: cmake
-          build-options: "make -j14"
+          build-tool: bash
+          build-options: "$GITHUB_WORKSPACE/build.sh"
