--- a/.github/workflows/redisc.yml
+++ b/.github/workflows/redisc.yml
@@ -41,4 +41,4 @@ jobs:
           project-name: test-make-gha
           build-directory: /
           build-tool: make
-          build-options: -j2
+          build-options: make -j2
